--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,14 +1,17 @@
 .card{
-    width: 40rem;
-    height: 20rem;
-    /*background-color: rgb(20, 26, 31);
-    */background-color: rgb(115, 159, 195);
+    width: 90%;
+    max-width: 38rem;
+    height: 17rem;
+    background-color: rgba(53, 74, 87, 0.447);
+    
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     position: relative;
     overflow: hidden;
-    box-shadow: 2px 2px 10px rgb(191, 191, 191),2px 2px 20px rgb(63, 63, 63);
+    padding: 1.5rem;
+    box-shadow: 2px 2px 10px rgb(44, 44, 44),2px 2px 20px rgb(21, 20, 20);
     border-radius: 1rem;
     -webkit-border-radius: 1rem;
     -moz-border-radius: 1rem;
@@ -56,9 +59,9 @@
     -o-transform: translateY(0%);
 }
 .hover-card img{
-    width: 80%;
+    height: 80%;
     filter: drop-shadow(2px 2px 10px rgba(116, 199, 222, 0.795));
-    -webkit-filter: drop-shadow(2px 2px 10px black);
+    -webkit-filter: drop-shadow(2px 2px 10px rgba(116, 199, 222, 0.795));
 }
 .card h1{
     background: linear-gradient(to right, rgb(9, 114, 118),rgb(70, 70, 210)
