--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -22,6 +22,8 @@
     -moz-transition: all .2s;
     -ms-transition: all .2s;
     -o-transition: all .2s;
+    cursor: pointer;
+    flex-shrink: 0;
 }
 .card:hover{
     box-shadow: 2px 2px 10px rgb(163, 244, 253),2px 2px 20px rgb(63, 63, 63);
